--- a/Initial Data Review.Rmd
+++ b/Initial Data Review.Rmd
@@ -41,7 +41,7 @@ paragraph in terms of six characteristics:
 *  Ideas for improving communications of model results (e.g., communications 
    channels and user interface design),
 
-*  Specifications for model performance or capabilities such as resolution,
+*  Specifications for model performance or data criteria such as resolution,
    geographic coverage or ability to conduct simulations.
 
 *  Suggestions about monitoring or data collection that could improve
@@ -49,10 +49,10 @@ paragraph in terms of six characteristics:
 
 If a paragraph or live note included something relevant to one or more of
 these categories, we summarized the related idea, and then assigned each
-paragraph or comment to categories. In this way we cn look at what ideas were 
+paragraph or comment to categories. In this way we can look at what ideas were 
 expressed most commonly during the workshops.
 
-Of course, not all paragraphs include information related to each of the five 
+Of course, not all paragraphs include information related to each of the six 
 types of information, so there is not a perfect one-to-one correspondence 
 between categories.
 
@@ -62,6 +62,7 @@ certain ideas came up, and cross-correlations among ideas.
 # Load Packages
 ```{r}
 library(tidyverse)
+library(ggmosaic)
 library(readxl)
 library(networkD3)
 
@@ -76,7 +77,7 @@ dir.create(file.path(getwd(), 'figures'), showWarnings = FALSE)
 
 # Load Data
 ```{r}
-the_data <- read_excel("Export_Data_Query.xlsx" ) %>%
+the_data <- read_excel("Data_Export_Query.xlsx" ) %>%
   mutate(ID = as.integer(ID)) %>%
   rename_with(function(x) sub(" Category_Category", '_Category', x)) %>%
   rename_with(function(x) sub(" ", '_', x))
@@ -95,19 +96,30 @@ data_types_table <- read_excel("Data Type.xlsx",
     col_types = c("numeric", "text", "text"))
 ```
 
+##  Numerical Values to Strings
 And finally I correct the data table to all text entries.
-
 ```{r}
 the_data <- the_data %>%
   mutate(Data_Timing = timing_table$Timing[match(Data_Timing, 
                                                  timing_table$ID)],
          Extension_Timing = timing_table$Timing[match(Extension_Timing,
+                                                      timing_table$ID)],
+         Data_Quality_Timing = timing_table$Timing[match(Data_Quality_Timing,
                                                       timing_table$ID)]) %>%
-  mutate(Data_Group = data_types_table$Group[match(Data_Group,
+  mutate(Monitoring_Data_Group = data_types_table$Group[match(Monitoring_Data_Group,
                                                     data_types_table$ID)],
-         Monitoring_Data_Group = data_types_table$Group[match(Monitoring_Data_Group,
-                                                    data_types_table$ID)] )
+         Data_Quality_Type = data_types_table$Group[match(Data_Quality_Type,
+                                                    data_types_table$ID)])
 ```
+
+
+```{r}
+the_data %>%
+  filter(! is.na(Monitoring_Data_Group)) %>%
+  select(contains("Monitoring"))
+```
+
+
 
 #A Warning about Uniqueness
 We have to be careful here, because each note or comment can be represented in 
@@ -116,7 +128,7 @@ imply several different users, for example.  But if there are multiple users and
 multiple data types, the records got duplicated (in part) in the SQL query.  So 
 for any analysis, we need to test for uniqueness of the data. always
 
-We actually have over 400 records, built out of just over 200 unique comments.
+We actually have over 375 records, built out of just over 200 unique comments.
 
 ```{r}
 cat("All rows in the data:\t\t")
@@ -173,7 +185,7 @@ cat("Number of Unique Data Records:\t")
 sum(tst$n)
 ```
 
-```{r}
+```{r fig.height = 5, fig.width = 5}
 tmp %>%
   filter(! is.na(Data_Group))  %>%
   mutate(Data_Group = fct_infreq(Data_Group)) %>%
@@ -206,7 +218,7 @@ cat("Number of Unique Extension Records:\t")
 sum(tst$n)
 ```
 
-```{r}
+```{r fig.height = 5, fig.width = 5}
 tmp %>%
   filter(! is.na(Extension_Category))  %>%
   mutate(Extension_Category = fct_infreq(Extension_Category)) %>%
@@ -235,48 +247,10 @@ the_data %>%
 ```
 
 So the model extensions I classified as "Other" include:
-
-*  Calculating tidal datums at specific locations,
-
-*  Finding ways to model areas at high risk for eutrophication,
-
 * Developing decision support tools for aquaculture siting and 
   permitting; and 
   
 *  Modelling impact of rising seas on groundwater. 
-
-Another ambiguous category are the comments I read as suggesting we expand the capabilities of the model in other ways:
-
-```{r}
-the_data %>%
-  filter(Extension_Category == "Use Capabilities") %>%
-  select(ID, Comment) %>%
-  unique() %>%
-  pull(Comment)
-```
-
-These include:
-
-*  Incorporating sea level rise into forecasts of tidal elevations or
-   tidal datums at habitat restoration locations or locations of vulnerable
-   infrastructure
-  
-*  Developing versions of the model that can be used in a "what if" or 
-   exploratory manner to build shared understanding when seeking policy
-   solutions.
-  
-*  Retention of model output -- at least "now cast" and short-term forecasts -- 
-   to allow forensic analysis of accidents and spills.
-   
-*  Ensure the model or its output can be coordinated with other data and other
-   models.
-   
-*  Using the model to conduct simulations to improve understanding of ocean
-   process and mechanism
-   
-*  Generating "digital twins" of the harbor.  The concept of 
-   a digital twin generally implies the ability to run various kinds of 
-   "what if" analyses.
 
 # User Interface Ideas
 ```{r}
@@ -290,6 +264,7 @@ tst <- xtabs(~Interface_Category, tmp) %>%
 cat("Number of Unique Interface Records:\t")
 sum(tst$n)
 ```
+
 ```{r fig.height = 5, fig.width = 5}
 tmp %>%
   filter(! is.na(Interface_Category))  %>%
@@ -310,7 +285,6 @@ ggsave('figures/interfaces.png', type='cairo',
          width = 6, height = 6)
 ```
 
-
 ## What are the comments associated with the "Other" Category?
 ```{r}
 the_data %>%
@@ -320,62 +294,101 @@ the_data %>%
   pull()
 ```
 
-# Model Performance Goals
+# Data Quality or Model Performance Goals
+
 ```{r}
 tmp <- the_data %>%
-  select(ID, Performance_Apply, Performance_Criterion) %>%
-  unique()
-xtabs(~Performance_Criterion + Performance_Apply, data = tmp) %>%
+  select(ID, Data_Quality_Category, Data_Quality_Type, Data_Quality_Timing) %>%
+  unique() %>%
+  filter(if_any(starts_with('Data_'), ~!is.na(.)))
+
+xtabs(~  Data_Quality_Type + Data_Quality_Category, data = tmp) %>%
   as_tibble() %>%
-  pivot_wider(names_from = Performance_Criterion, values_from = n) %>%
-  mutate(row_tot = rowSums(select(., `Accuracy`:`Temporal Resolution`))) %>%
-  arrange(desc(row_tot))
+  pivot_wider(names_from = Data_Quality_Type, values_from = n) %>%
+  mutate(row_tot = rowSums(select(., `Inundation`:`Waves`))) %>%
+  arrange(desc(row_tot)) %>%
+  knitr::kable()
 ```
 
+In initial draft graphics, the "timimg" category is important, but confusing
+because it also occurs as a separate category.
+
+
 ```{r}
-tmp %>%
-  filter(! is.na(Performance_Apply))  %>%
-  mutate(Performance_Apply = fct_infreq(Performance_Apply)) %>%
-  mutate(Performance_Criterion = fct_infreq(Performance_Criterion)) %>%
-   
-  ggplot(aes(Performance_Apply)) +
-  geom_bar(aes(fill = Performance_Criterion)) +
-  theme(axis.text.x = element_text(angle = 90, size = 16,
+tmp <- the_data %>%
+  select(ID, Data_Quality_Category, Data_Quality_Type, Data_Quality_Timing) %>%
+  unique() %>%
+  filter(if_any(starts_with('Data_'), ~!is.na(.))) %>%
+  filter(! is.na(Data_Quality_Category),
+           Data_Quality_Category != "Timing" )  %>%
+  mutate(Data_Quality_Category = fct_infreq(Data_Quality_Category),
+         Data_Quality_Type = fct_infreq(Data_Quality_Type),
+         Data_Quality_Timing = fct_infreq(Data_Quality_Timing))
+```
+
+```{r fig.width = 6, fig.height = 5}
+ggplot(tmp, aes(Data_Quality_Category)) +
+  geom_bar(aes(fill = Data_Quality_Type)) +
+  theme(axis.text.x = element_text(angle = 90, size = 14,
                                    hjust = 1, vjust = 0.25)) +
-  scale_fill_viridis_d(name = '') +
+  scale_fill_viridis_d(name = 'Data Type') +
   ylab('Count') +
   xlab("") +
-  ggtitle("Model Performance Suggestions")
+  ggtitle("Performance Suggestions")
 
+```
+```{r}
+ggsave('figures/Performance.png', type='cairo',
+         width = 6, height = 5)
+```
+
+```{r fig.width = 6, fig.height = 5}
+ggplot( tmp, aes(Data_Quality_Category)) +
+  geom_bar(aes(fill = Data_Quality_Timing)) +
+  theme(axis.text.x = element_text(angle = 90, size = 16,
+                                   hjust = 1, vjust = 0.25)) +
+  scale_fill_viridis_d(name = 'Timing') +
+  ylab('Count') +
+  xlab("") +
+  ggtitle("Model Performance")
+
+```
+
+## Testing Mosaic Plots
+The `ggmosaic' package allows mosaic plots, but it's a but buggy and hard to
+use.
+
+```{r fig.width = 8, fig.height = 6}
+ggplot(tmp) +
+  geom_mosaic(aes(x = product(Data_Quality_Category), 
+                  fill = Data_Quality_Type)) +
+  scale_fill_viridis_d(name = 'Data Type') +
+  ggtitle("Model Performance") +
+  theme_mosaic() +
+  theme(axis.text.x = element_text(angle = 90, size = 12, 
+                                   hjust = 1, vjust = 0.25),
+          axis.text.y = element_text(size = 12)) +
+  xlab('') +
+  ylab('')
 ```
 
 ```{r}
-ggsave('figures/performance.png', type='cairo',
-         width = 6, height = 6)
+ggsave('figures/Performance Mosaic.png', type='cairo',
+         width = 6, height = 5)
 ```
 
-## What are the "Capabilities" Comments?
-```{r}
-the_data %>%
-  filter(Performance_Criterion == "Capability") %>%
-  select(ID, Comment) %>%
-  unique() %>%
-  pull(Comment)
-```
+On the whole, what we see is that people commented repeatedly on the need for
+high spatial resolution information, especially with regards to water level,
+inundation, and waves. Many comments also good temporal resolution for water 
+level data - -often associates with forecasting tidal datums for habitat 
+restoration.  Finally, numerous comments focused on geographic extent and 
+model availability, but those comments were usually generic, and not tied to
+specific data needs or requests.
 
-Those can be categorized as:
-
-1. Ability to conduct various kinds of exploratory, what if, or scenario-based
-   exploration of actions;
-
-2.  Incorporation of SLR into model forecasts;
-
-3. Ability to track pollutants from many locations simultaneously, rather than 
-   from just one location;
-
-4. Ability to provide data for forensic analysis -- presumably past conditions;
-
-5. Integration with other data and models.
+It is possible to layer a third variable into these Mosaic Plots, or to use 
+`ggplot` faceting functions to look at three way contingency tables, but
+in this setting, it's just confusing.  We have too many possible divisions of
+the three variables associated with each performance comment.
 
 # Monitoring Suggestions
 ```{r}
@@ -386,28 +399,31 @@ tst <- xtabs(~Monitoring_Data_Group, tmp) %>%
   sort(decreasing = TRUE) %>%
   as_tibble()
 
-cat("Number of Unique Extension Records:\t")
+cat("Number of Unique Monitoting Records:\t")
 sum(tst$n)
 ```
 
-```{r}
-tmp %>%
+```{r fig.height = 5, fig.width = 6}
+tmp <- 
+  the_data %>%
+  select(ID, Monitoring_Category, Monitoring_Data_Group) %>%
   filter(! is.na(Monitoring_Data_Group))  %>%
-  mutate(Monitoring_Data_Group = fct_infreq(Monitoring_Data_Group)) %>%
+  mutate(Monitoring_Data_Group = fct_infreq(Monitoring_Data_Group))
    
-  ggplot(aes(Monitoring_Data_Group)) +
-  geom_bar(fill = "blue4") +
+ggplot(tmp, aes(Monitoring_Data_Group, fill = Monitoring_Category)) +
+  geom_bar() +
   theme(axis.text.x = element_text(angle = 90, size = 16,
                                    hjust = 1, vjust = 0.25)) +
+  scale_fill_viridis_d(name = 'Comment\nType') +
   ylab('Count') +
   xlab("") +
-  ggtitle("Additional Models or Model Extensions Implied")
+  ggtitle("Monitoring Comments")
 
 ```
 
 ```{r}
 ggsave('figures/monitoring.png', type='cairo',
-         width = 6, height = 6)
+         width = 6, height = 5)
 ```
 
 ## What are the "Not Specified" Comments?
