--- a/Sankey Plots.Rmd
+++ b/Sankey Plots.Rmd
@@ -75,7 +75,7 @@ dir.create(file.path(getwd(), 'figures'), showWarnings = FALSE)
 
 # Load Data
 ```{r}
-the_data <- read_excel("Export_Data_Query.xlsx" ) %>%
+the_data <- read_excel("Data_Export_Query.xlsx" ) %>%
   mutate(ID = as.integer(ID)) %>%
   rename_with(function(x) sub(" Category_Category", '_Category', x)) %>%
   rename_with(function(x) sub(" ", '_', x))
@@ -94,20 +94,22 @@ data_types_table <- read_excel("Data Type.xlsx",
     col_types = c("numeric", "text", "text"))
 ```
 
+##  Numerical Values to Strings
 And finally I correct the data table to all text entries.
-
 ```{r}
 the_data <- the_data %>%
   mutate(Data_Timing = timing_table$Timing[match(Data_Timing, 
                                                  timing_table$ID)],
          Extension_Timing = timing_table$Timing[match(Extension_Timing,
+                                                      timing_table$ID)],
+         Data_Quality_Timing = timing_table$Timing[match(Data_Quality_Timing,
                                                       timing_table$ID)]) %>%
-  mutate(Data_Group = data_types_table$Group[match(Data_Group,
+  mutate(Monitoring_Data_Group = data_types_table$Group[match(Monitoring_Data_Group,
                                                     data_types_table$ID)],
-         Monitoring_Data_Group = 
-           data_types_table$Group[match(Monitoring_Data_Group,
-                                        data_types_table$ID)] )
+         Data_Quality_Type = data_types_table$Group[match(Data_Quality_Type,
+                                                    data_types_table$ID)])
 ```
+
 
 #A Warning about Uniqueness
 We have to be careful here, because each note or comment can be represented in 
@@ -276,7 +278,7 @@ The command requires you to define the names and the colors together as the
 domain and range of the palette.
 
 I randomize color order to minimize conflict with adjacent nodes. I specify the
-last color -- for the right hand nodes -- as a medium gray.
+last color -- for the right hand nodes -- as a medium purple gray.
 
 ```{r}
 domain = c(users, "B")
@@ -427,7 +429,8 @@ d3_colors(c("cat", "dog", "squirrel"), "foods", "#ffffff")
 ```
 
 ## Assemble the Nodes and Links Data Frames
-We have to be able to filter the data to remove rare 
+We have to be able to filter the data to remove rare connections.  This function 
+builds and rebuilds the data set.
 I'm going to forego error checking here and keep this as simple as possible...
 ```{r}
 assemble_frames <- function(.dat, .left, .right, 
@@ -560,10 +563,8 @@ webshot::webshot('figures/users and data simple.html',
                  'figures/users and data simple.png')
 ```
 
-
 # From User to Model Extensions
 ## Full Data
-
 ```{r}
 tmp <- the_data %>%
   select(ID, User_Category, Extension_Category) %>%
@@ -654,13 +655,26 @@ Not very useful....
 
 # From Data Requests to Time Domain
 ## Full Data
+Note that data preparation requires avoiding category conflicts between the 
+"source" and "target" note lists here. Specifically, "Unclear" appears in both
+lists here.  We need to rename or delete at least one of them.  We chose to 
+delete the "Unclear" categories entirely, since they are  not informative in 
+this context.
+
+```{r}
+unique(the_data$Data_Group)
+cat("\n")
+unique(the_data$Data_Timing)
+```
+
 ```{r}
 tmp <- the_data %>%
   select(ID, Data_Group, Data_Timing) %>%
-  filter(! is.na(Data_Timing)) %>%
-  filter(! Data_Timing == "Unclear or Unknown") %>%
-  filter(! is.na(Data_Group)) %>%
-    mutate(Data_Timing = fct_infreq(Data_Timing),
+  filter(Data_Timing != "Unclear",
+         Data_Group != "Unclear") %>%
+  filter(! is.na(Data_Group),
+         ! is.na(Data_Timing)) %>%
+  mutate(Data_Timing = fct_infreq(Data_Timing),
          Data_Group = fct_infreq(Data_Group)) %>%
   unique()
 ```
@@ -672,7 +686,6 @@ plt
 ```
 
 
-
 ```{r}
 saveNetwork(plt, file = 'figures/data to timing.html', selfcontained = TRUE)
 
@@ -682,7 +695,7 @@ webshot::webshot('figures/data to timing.html', 'figures/data to timing.png')
 ## Simplified Plot
 ```{r}
 plt <- tmp %>%
-  my_sankey(Data_Group, Data_Timing, final_color ="#9090a0", drop_below = 3)
+  my_sankey(Data_Group, Data_Timing, final_color ="#9090a0", drop_below = 2)
 plt
 ```
 
@@ -708,11 +721,10 @@ saveNetwork(plt, file = 'figures/timing to data.html', selfcontained = TRUE)
 webshot::webshot('figures/timing to data.html', 'figures/timing to data.png')
 ```
 
-
 ## Simplified Plot 
 ```{r}
 plt <- tmp %>%
-  my_sankey(Data_Timing, Data_Group, final_color ="#9090a0", drop_below = 3)
+  my_sankey(Data_Timing, Data_Group, final_color ="#9090a0", drop_below = 2)
 plt
 ```
 
