--- a/Mosaic Plot.Rmd
+++ b/Mosaic Plot.Rmd
@@ -159,16 +159,19 @@ The `ggmosaic' package allows mosaic plots, but it's a but buggy and hard to
 use.  Note that if I plot the mosaic plot directly, it crashes rendering of the
 PDF document.  The workaround here simply saves a graphic and then displays it.
 
-```{r fig.width = 6, fig.height = 5}
+```{r fig.width = 6, fig.height = 7}
 the_mosaic <- ggplot(tmp) +
   geom_mosaic(aes(x = product(Performance_Category), 
                   fill = Performance_Type)) +
-  scale_fill_viridis_d(name = 'Data Type') +
-  ggtitle("Model Performance") +
+  scale_fill_viridis_d(name = '') +
+  ggtitle("Information Needs") +
   theme_mosaic() +
-  theme(axis.text.x = element_text(angle = 90, size = 12, 
+  theme(axis.text.x = element_text(angle = 90, size = 10, 
                                    hjust = 1, vjust = 0.25),
-          axis.text.y = element_text(size = 12)) +
+          axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = 'top') +
+  guides(fill=guide_legend(nrow=3)) +
   xlab('') +
   ylab('')
 
@@ -177,7 +180,7 @@ the_mosaic
 
 ```{r}
 ggsave('figures/Performance_Mosaic.png', the_mosaic, type='cairo',
-         width = 6, height = 5)
+         width = 6, height = 7)
 ```
 
 
@@ -240,5 +243,5 @@ the_mosaic
 
 ```{r}
 ggsave('figures/User_Needs_Mosaic.png', the_mosaic, type='cairo',
-         width = 6, height = 5)
+         width = 6, height = 7)
 ```
